tests/examples/bad/bad003.lat
int main () {
    if (true)
        int a = 1;
    return a;
}